2013-05-27  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql: Updated data types to allow 64bit integers to be
	  stored in tagente_datos and tagente_datos_inc.

2013-05-24  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	extensions/update_manager/settings.php
	extensions/update_manager/main.php
	godmode/agentes/module_manager.php: Fixed 
	various visual issues like update manager icons
	or width of left tab in godmode sections

	* godmode/agentes/module_manager_editor_plugin.php: 
	Fixed tips of plugins help fields

	* extensions/snmp_explorer.php: avoid interfaces
	without name in snmp explorer

	* operation/agentes/bulbs.php: Remove old file

2013-05-24  Ramon Novoa  <rnovoa@artica.es>

	* include/functions.php: Cleaned junk characters.

2013-05-24  Ramon Novoa  <rnovoa@artica.es>

	* include/functions.php: Merged from 4.0 branch. Removed calls
	  to PHP's SNMP functions.

2013-05-23 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/pandora_visual_console.js,
	include/functions_visual_map.php: fixed to show the lines between
	the items in the visualmap into a dashboard.
	
	Fixes: #2232
	
	MERGED FROM THE BRANCH 4

2013-05-21  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_netflow.php: Added support for multiple netflow
	  directories.

2013-05-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/styles/pandora_minimal.css
	include/styles/dialog.css
	include/styles/menu.css
	include/styles/jquery-ui-1.10.0.custom.css
	include/functions_events.php
	operation/events/events_list.php
	include/functions_snmp_browser.php
	include/styles/pandora.css: A lot of graphic
	changes including events form and snmp browser
	layout

	* include/ajax/module.php
	include/functions_ui.php
	include/functions.php
	include/functions_agents.php
	include/functions_graph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php
	include/functions_reporting.php
	include/functions_filemanager.php