@@ -438,9 +438,9 @@ function gis_get_agents_layer($idLayer, $fields = null) {
 	$agents = db_get_all_rows_sql('SELECT ' . $select . '
 		FROM tagente
 		WHERE id_agente IN (
-				SELECT tagente_id_agente
-				FROM tgis_map_layer_has_tagente
-				WHERE tgis_map_layer_id_tmap_layer = ' . $idLayer . ');');
+			SELECT tagente_id_agente
+			FROM tgis_map_layer_has_tagente
+			WHERE tgis_map_layer_id_tmap_layer = ' . $idLayer . ');');
 	
 	if ($agents !== false) {
 		foreach ($agents as $index => $agent) {
@@ -1302,5 +1302,83 @@ function gis_add_layer_list($layer_list) {
 	}
 	
 	return $returnVar;
+}
+
+function gis_calculate_distance($lat_start, $lon_start, $lat_end, $lon_end) {
+	//Use 3958.9=miles, 6371.0=Km;
+	$earthRadius = 6371;
+	
+	$distance = 0;
+	$azimuth = 0;
+	$beta = 0;
+	$cosBeta = 0;
+	$cosAzimuth = 0;
+	
+	$lat_start = deg2rad($lat_start);
+	$lon_start = deg2rad($lon_start);
+	$lat_end = deg2rad($lat_end);
+	$lon_end = deg2rad($lon_end);
+	
+	if (abs($lat_start) < 90.0) {
+		$cosBeta = (sin($lat_start) * sin($lat_end)) +
+			((cos ($lat_start) * cos ($lat_end)) * cos ($lon_end - $lon_start));
+		
+		if ($cosBeta >= 1.0) {
+			return 0.0;
+		}
+		
+		/*
+		Antipodes  (return miles, 0 degrees)
+		*/
+		if ($cosBeta <= -1.0) {
+			return floor($earthRadius * pi() * 100.0) / 100.0;
+		}
+		
+		$beta = acos($cosBeta);
+		$distance = $beta * $earthRadius;
+		$cosAzimuth = (sin($lat_end) - sin($lat_start) * cos($beta)) /
+			(cos($lat_start) * sin($beta));
+		
+		if ($cosAzimuth >= 1.0) {
+			$azimuth = 0.0;
+		}
+		elseif ($cosAzimuth <= -1.0) {
+			$azimuth = 180.0;
+		}
+		else {
+			$azimuth = rad2deg(acos($cosAzimuth));
+		}
+		
+		if (sin($lon_end - $lon_start) < 0.0) {
+			$azimuth = 360.0 - $azimuth;
+		}
+		
+		return floor($distance * 100.0) / 100.0;
+	}
+	
+	//If P1 Is North Or South Pole, Then Azimuth Is Undefined
+	if (gis_sgn($lat_start) == gis_sgn ($lat_end)) {
+		$distance = $earthRadius * (pi() / 2 - abs($lat_end));
+	}
+	else {
+		$distance = $earthRadius * (pi() / 2 + abs($lat_end));
+	}
+	
+	return floor($distance * 100.0) / 100.0;
+}
+
+function gis_sgn($number)
+{
+	if ($number == 0) {
+		return 0;
+	}
+	else {
+		if ($number < 0) {
+			return -1;
+		}
+		else {
+			return 1;
+		}
+	}
 }
 ?>
