@@ -81,7 +81,8 @@ if ($agentData === false) {
 echo "<br />";
 $dataLastPosition = gis_get_data_last_position_agent($agentId);
 if ($dataLastPosition !== false) {
-	echo "<b>" . __("Last position in ") . $dataLastPosition['start_timestamp'] . ":</b> " .
+	echo "<b>" . __("Last position in ") .
+		$dataLastPosition['start_timestamp'] . ":</b> " .
 		$dataLastPosition['stored_longitude'] . ", " . $dataLastPosition['stored_latitude'] . ", " . $dataLastPosition['stored_altitude'];
 }
 echo "<br />";
@@ -118,11 +119,44 @@ if ($result === false) {
 else {
 	ui_pagination ($countData, false) ;
 	$table->data = array();
-	foreach ($result as $row) {
-		$rowdata = array($row['longitude'], $row['latitude'], $row['altitude'], $row['start_timestamp'], $row['end_timestamp'], $row['description'], $row['number_of_packages'], $row['manual_placement']);
+	foreach ($result as $key => $row) {
+		$distance = 0;
+		if (isset($result[$key - 1])) {
+			$distance = gis_calculate_distance($row['latitude'],
+				$row['longitude'], $result[$key - 1]['latitude'],
+				$result[$key - 1]['longitude']);
+		}
+		else {
+			$dataLastPosition = gis_get_data_last_position_agent($agentId);
+			if ($dataLastPosition !== false) {
+				$distance = gis_calculate_distance($row['latitude'],
+					$row['longitude'], $dataLastPosition['stored_latitude'],
+					$dataLastPosition['stored_longitude']);
+			}
+		}
+		
+		$rowdata = array(
+			$row['longitude'],
+			$row['latitude'],
+			$row['altitude'],
+			$row['start_timestamp'],
+			$row['end_timestamp'],
+			$row['description'],
+			sprintf(__('%s Km'), $distance),
+			$row['number_of_packages'],
+			$row['manual_placement']);
 	array_push($table->data, $rowdata); 
 	}
-	$table->head = array(__("Longitude"), __("Latitude"), __("Altitude"), __("From"), __("To"), __("Description"), '# '.__("of Packages"), __("Manual placement"));
+	$table->head = array(
+		__("Longitude"),
+		__("Latitude"),
+		__("Altitude"),
+		__("From"),
+		__("To"),
+		__("Description"),
+		__('Distance'),
+		__("# of Packages"),
+		__("Manual placement"));
 	$table->class = 'position_data_table';
 	$table->id = $agent_name.'_position_data_table';
 	$table->title = $agent_name_original . " " . __("positional data");
